# Otpad

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx  commands.rs  excel.rs  main.rs  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  excel.rs  excel_import.rs  main.rs
src/components/: ConfigManager.tsx  HeaderForm.tsx  MonthTabs.tsx  WasteTable.tsx
src/utils/: monthDataForExport.ts  parseTonsInput.ts  serbianCyrillicToLatin.ts  tauriInvoke.ts
